# SignSaya

./: README.md
hardware/SignSaya/ESP-IDF/: .gitignore  sdkconfig  sdkconfig.old
hardware/SignSaya/ESP-IDF/components/I2Cdev/: CMakeLists.txt
hardware/SignSaya/ESP-IDF/components/ICM20948/: CMakeLists.txt  ICM_20948.cpp
hardware/SignSaya/ESP-IDF/components/MPU6050/: CMakeLists.txt
hardware/SignSaya/ESP-IDF/components/espressif__arduino-esp32/: .component_hash  CMakeLists.txt  idf_component.yml
hardware/SignSaya/ESP-IDF/components/espressif__arduino-esp32/cores/esp32/: MacAddress.cpp
hardware/SignSaya/ESP-IDF/components/espressif__esp-tflite-micro/: CMakeLists.txt
hardware/SignSaya/ESP-IDF/main/: CMakeLists.txt  aaaa.cpp  aiTest.h  bleSetup.h  config.h  fingers.h  icmDMP.h  idf_component.yml  main.cpp  model.h  mpuDMP.h  types.h
hardware/SignSaya/SignSaya/: SignSaya.ino  bleSetup.h  config.h  fingers.h  icmDMP.h  mpuDMP.h  types.h
hardware/SignSaya/Training Data Gatherer/: fix.py  train1.py  train2.py
software/SignSaya/signsaya/: pubspec.yaml
software/SignSaya/signsaya/android/app/src/main/: AndroidManifest.xml
software/SignSaya/signsaya/lib/pages/: bluetooth_connection.dart  translation_page.dart
software/SignSaya/signsaya/lib/pages/FBP_screens/: bluetooth_off_screen.dart  device_screen.dart  scan_screen.dart
software/SignSaya/signsaya/lib/pages/FBP_screens/utils/: extra.dart  snackbar.dart  utils.dart
software/SignSaya/signsaya/lib/pages/FBP_screens/widgets/: characteristic_tile.dart  descriptor_tile.dart  scan_result_tile.dart  (+2 more)
(+6 files in other folders)
